<resources>
    <string name="app_name">Petshop</string>
    <string name="intro_fist_line">Place find the best choice for your pet</string>
    <string name="intro_second_line">Shop is in your hand now!!!</string>
    <string name="btn_login">User Login here</string>
    <string name="btn_user_signup">New User? Register here</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="user_login">USER LOGIN</string>
    <string name="registration_message">new user registration</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_number">Contact Number</string>
    <string name="btn_register">Register</string>
</resources>