<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.LoginActivity"
    android:background="@drawable/screenbg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="201dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/user_login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkRed"
            android:textSize="35sp"
            android:layout_marginBottom="40sp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/userEmailWarpper"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userEmail"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_email"
                android:textColor="@color/colorRed"
                android:textSize="18sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/userPasswordWarpper"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userPassword"
                android:inputType="textPassword"
                android:hint="@string/enter_password"
                android:textColor="@color/colorRed"
                android:textSize="18sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/user_login"
            android:background="@drawable/btnloginbg"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="OR"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkRed"
            android:textSize="35sp"
            android:layout_marginBottom="40sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40sp"
            android:text="@string/btn_user_signup"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkRed"
            android:textSize="25sp" />

    </LinearLayout>


</LinearLayout>